Update Java core to use Panama FFM bindings