@@ -95,14 +95,45 @@ public final class Watermark {
             this.text = text;
         }
 
-        public TextBuilder font(FontName fontName) { this.fontName = fontName; return this; }
-        public TextBuilder font(String fontName) { this.fontName = FontName.fromName(fontName); return this; }
-        public TextBuilder size(float fontSize) { this.fontSize = fontSize; return this; }
-        public TextBuilder color(int argbColor) { this.argbColor = argbColor; return this; }
-        public TextBuilder rotation(float degrees) { this.rotation = degrees; return this; }
-        public TextBuilder opacity(float opacity) { this.opacity = Math.max(0, Math.min(1, opacity)); return this; }
-        public TextBuilder position(Position position) { this.position = position; return this; }
-        public TextBuilder margin(float margin) { this.margin = margin; return this; }
+        public TextBuilder font(FontName fontName) {
+            this.fontName = fontName;
+            return this;
+        }
+
+        public TextBuilder font(String fontName) {
+            this.fontName = FontName.fromName(fontName);
+            return this;
+        }
+
+        public TextBuilder size(float fontSize) {
+            this.fontSize = fontSize;
+            return this;
+        }
+
+        public TextBuilder color(int argbColor) {
+            this.argbColor = argbColor;
+            return this;
+        }
+
+        public TextBuilder rotation(float degrees) {
+            this.rotation = degrees;
+            return this;
+        }
+
+        public TextBuilder opacity(float opacity) {
+            this.opacity = Math.clamp(opacity, 0, 1);
+            return this;
+        }
+
+        public TextBuilder position(Position position) {
+            this.position = position;
+            return this;
+        }
+
+        public TextBuilder margin(float margin) {
+            this.margin = margin;
+            return this;
+        }
 
         public Watermark build() {
             int alpha = (int) (opacity * 255) & 0xFF;
@@ -118,16 +149,31 @@ public final class Watermark {
         private Position position = Position.CENTER;
         private float margin = 0;
 
+        private float scale = 0.30f;
+
         private ImageBuilder(BufferedImage image) {
             this.image = image;
         }
 
-        public ImageBuilder opacity(float opacity) { this.opacity = Math.max(0, Math.min(1, opacity)); return this; }
-        public ImageBuilder position(Position position) { this.position = position; return this; }
-        public ImageBuilder margin(float margin) { this.margin = margin; return this; }
-        public ImageBuilder scale(float scale) { // default: 30% of page width
-            float scale1 = Math.max(0.01f, Math.min(1, scale));
-            return this; }
+        public ImageBuilder opacity(float opacity) {
+            this.opacity = Math.clamp(opacity, 0, 1);
+            return this;
+        }
+
+        public ImageBuilder position(Position position) {
+            this.position = position;
+            return this;
+        }
+
+        public ImageBuilder margin(float margin) {
+            this.margin = margin;
+            return this;
+        }
+
+        public ImageBuilder scale(float scale) {
+            this.scale = Math.clamp(scale, 0.01f, 1.0f);
+            return this;
+        }
 
         public Watermark build() {
             int alpha = (int) (opacity * 255) & 0xFF;
